Laser-Gravur, Materialien

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard - Produkt Kalkulator{% endblock %}
+{% block title %}Dashboard - Picobellu Kalkulator{% endblock %}
 
 {% block content %}
 <div class="stats-grid">
@@ -27,6 +27,8 @@
     <div class="actions" style="margin-top: 20px;">
         <a href="/products/3d-print/new" class="btn btn-primary">+ 3D-Druck</a>
         <a href="/products/sticker-sheet/new" class="btn btn-primary">+ Stickerbogen</a>
+        <a href="/products/diecut-sticker/new" class="btn btn-primary">+ Die-Cut Sticker</a>
+        <a href="/products/laser-engraving/new" class="btn btn-primary">+ Laser-Gravur</a>
     </div>
 </div>
 
@@ -96,3 +98,5 @@
     </div>
 </div>
 {% endblock %}
+
+
