--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -362,7 +362,8 @@
                 <a href="/products">Produkte</a>
                 <a href="/products/new">Neues Produkt</a>
                 <a href="/materials">Materialien</a>
-                <a href="/feedback/list" style="margin-left: auto; opacity: 0.8;">📝 Feedback</a>
+                <a href="/ideas" style="margin-left: auto; opacity: 0.8;">💡 Ideen</a>
+                <a href="/feedback/list" style="opacity: 0.8;">📝 Feedback</a>
             </nav>
         </div>
     </header>
