--- a/app/templates/machines/list.html
+++ b/app/templates/machines/list.html
@@ -10,6 +10,7 @@
     </div>
     
     {% if machines %}
+    <div class="table-responsive">
     <table>
         <thead>
             <tr>
@@ -46,6 +47,7 @@
             {% endfor %}
         </tbody>
     </table>
+    </div>
     {% else %}
     <p style="text-align: center; padding: 40px; color: var(--color-text-light);">
         Noch keine Maschinen vorhanden. <br>
