--- a/app/templates/products/form_sticker_sheet.html
+++ b/app/templates/products/form_sticker_sheet.html
@@ -84,16 +84,18 @@
             <div>
                 <div class="form-group">
                     <label for="cut_time_hours">Schneidezeit (Stunden)</label>
-                    <input type="number" id="cut_time_hours" name="cut_time_hours" 
-                           step="0.1" min="0"
+                    <input type="text" id="cut_time_hours" name="cut_time_hours" 
+                           pattern="[0-9]*[.,]?[0-9]*" inputmode="decimal"
                            value="{{ product.cut_time_hours if product else '0' }}">
+                    <small style="color: var(--color-text-light);">z.B. 0,5 oder 0.5 (Komma oder Punkt)</small>
                 </div>
                 
                 <div class="form-group">
-                    <label for="labor_hours">Arbeitsstunden</label>
-                    <input type="number" id="labor_hours" name="labor_hours" 
-                           step="0.1" min="0"
-                           value="{{ product.labor_hours if product else '0' }}">
+                    <label for="labor_minutes">Arbeitszeit (Minuten)</label>
+                    <input type="text" id="labor_minutes" name="labor_minutes" 
+                           pattern="[0-9]*[.,]?[0-9]*" inputmode="decimal"
+                           value="{% if product %}{{ (product.labor_hours * 60) }}{% else %}0{% endif %}">
+                    <small style="color: var(--color-text-light);">Produktionszeit in Minuten</small>
                 </div>
                 
                 <div class="form-group">
