--- a/app/templates/products/list.html
+++ b/app/templates/products/list.html
@@ -30,6 +30,7 @@
     </form>
     
     {% if products %}
+    <div class="table-responsive">
     <table>
         <thead>
             <tr>
@@ -65,6 +66,7 @@
             {% endfor %}
         </tbody>
     </table>
+    </div>
     {% else %}
     <p style="text-align: center; padding: 40px; color: var(--color-text-light);">
         {% if search or category %}
